fix bug in notebook

--- a/algorithm_demo.ipynb
+++ b/algorithm_demo.ipynb
@@ -29,17 +29,7 @@
    "execution_count": null,
    "id": "58feeb34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Protected attribute: RAC1P\n",
-      "Number of subgroups considered: 7\n",
-      "Size of subgroups: [10685, 794, 1213, 59, 259, 315, 997]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -64,8 +54,8 @@
     "labels_train = torch.tensor(y_train,dtype=torch.float32)\n",
     "dataset_train = torch.utils.data.TensorDataset(features_train, labels_train)\n",
     "\n",
-    "c_batch_size = 32\n",
-    "min_subgroup_size = 32\n",
+    "c_batch_size = 128\n",
+    "min_subgroup_size = c_batch_size\n",
     "# For each subgroup, FairnessConstraint needs a list of indices of samples belonging to that subgroup\n",
     "group_indices_train = [\n",
     "    np.nonzero(groups_train == group_id)[0] for group_id in np.unique(groups_train)\n",
@@ -101,19 +91,11 @@
    "execution_count": null,
    "id": "c3a2ead3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of constraints: 21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import combinations\n",
     "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import abs_loss_equality\n",
+    "from src.constraints.constraint_fns import abs_loss_equality, tpr_equality\n",
     "\n",
     "# the protected attribute is \"Race\" (RAC1P)\n",
     "# we put a pairwise constraint on each combination of subgroups\n",
@@ -124,9 +106,8 @@
     "        dataset=dataset_train,\n",
     "        group_indices=[gr1, gr2],\n",
     "        # subtract bound from absolute loss difference to bring constraint to form $c \\leq 0$\n",
-    "        fn=lambda model, samples: torch.abs(abs_loss_equality(torch.nn.BCEWithLogitsLoss(), model, samples)) - constraint_bound,\n",
-    "        batch_size=c_batch_size,\n",
-    "        seed=0\n",
+    "        fn=lambda model, samples: tpr_equality(torch.nn.BCEWithLogitsLoss(), model, samples) - constraint_bound,\n",
+    "        batch_size=c_batch_size\n",
     "    )\n",
     "\n",
     "    constraints.append(c)\n",
@@ -143,7 +124,7 @@
    "source": [
     "# helper function to analyze model performance\n",
     "\n",
-    "def model_stats(model, features, labels, groups, constraints):\n",
+    "def model_stats(model, features, labels, groups, constraints, constraint_bound):\n",
     "    with torch.inference_mode():\n",
     "        gr_ind = list(combinations(groups, 2))\n",
     "        vals = []\n",
@@ -151,7 +132,7 @@
     "        for i, c in enumerate(constraints):\n",
     "            idx1, idx2 = gr_ind[i]\n",
     "            val = c.eval(model, [(features[idx1], labels[idx1]), (features[idx2], labels[idx2])]) + constraint_bound\n",
-    "            vals.append(abs(val.numpy().item()))\n",
+    "            vals.append(val.numpy().item())\n",
     "\n",
     "            logits1 = model(features[idx1])\n",
     "            logits2 = model(features[idx2])\n",
@@ -239,71 +220,14 @@
    "execution_count": null,
    "id": "8793a889",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0, loss: 0.4567770318327738\n",
-      "Epoch: 1, loss: 0.4267354179506323\n",
-      "Epoch: 2, loss: 0.42177021729626823\n",
-      "Epoch: 3, loss: 0.41923434915952384\n",
-      "Epoch: 4, loss: 0.4167473852368338\n",
-      "Epoch: 5, loss: 0.4148108066791402\n",
-      "Epoch: 6, loss: 0.41341322707012296\n",
-      "Epoch: 7, loss: 0.4125295749399811\n",
-      "Epoch: 8, loss: 0.4119187536915498\n",
-      "Epoch: 9, loss: 0.41052870083201143\n",
-      "Epoch: 10, loss: 0.4095372299530676\n",
-      "Epoch: 11, loss: 0.4085638278962246\n",
-      "Epoch: 12, loss: 0.40801226420860204\n",
-      "Epoch: 13, loss: 0.4076137725662972\n",
-      "Epoch: 14, loss: 0.4061356251061495\n",
-      "Epoch: 15, loss: 0.40524284524976145\n",
-      "Epoch: 16, loss: 0.4051640779445214\n",
-      "Epoch: 17, loss: 0.4038818087761423\n",
-      "Epoch: 18, loss: 0.40338663783456596\n",
-      "Epoch: 19, loss: 0.40176192541340633\n",
-      "Epoch: 20, loss: 0.4007976305271898\n",
-      "Epoch: 21, loss: 0.40091671312360894\n",
-      "Epoch: 22, loss: 0.40019975090399384\n",
-      "Epoch: 23, loss: 0.3993254276325128\n",
-      "Epoch: 24, loss: 0.3990602514240891\n",
-      "Epoch: 25, loss: 0.39761721761897206\n",
-      "Epoch: 26, loss: 0.3975723823865077\n",
-      "Epoch: 27, loss: 0.39697754393065615\n",
-      "Epoch: 28, loss: 0.3963453410126801\n",
-      "Epoch: 29, loss: 0.39607338504200534\n",
-      "Epoch: 30, loss: 0.39504804335800664\n",
-      "Epoch: 31, loss: 0.3942838875643377\n",
-      "Epoch: 32, loss: 0.3943626855699612\n",
-      "Epoch: 33, loss: 0.3941929980646819\n",
-      "Epoch: 34, loss: 0.3925179587677121\n",
-      "Epoch: 35, loss: 0.3928385819641075\n",
-      "Epoch: 36, loss: 0.3926107321333672\n",
-      "Epoch: 37, loss: 0.3921529855911753\n",
-      "Epoch: 38, loss: 0.39111863216385245\n",
-      "Epoch: 39, loss: 0.39101101238546626\n",
-      "Epoch: 40, loss: 0.39004249923995565\n",
-      "Epoch: 41, loss: 0.38968608109280467\n",
-      "Epoch: 42, loss: 0.3890957736875862\n",
-      "Epoch: 43, loss: 0.3887856855788933\n",
-      "Epoch: 44, loss: 0.38853218130368206\n",
-      "Epoch: 45, loss: 0.38814738153346945\n",
-      "Epoch: 46, loss: 0.38739122916013\n",
-      "Epoch: 47, loss: 0.3869896418015872\n",
-      "Epoch: 48, loss: 0.3868799282437457\n",
-      "Epoch: 49, loss: 0.386131253791973\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch.optim import Adam\n",
     "\n",
     "loader = torch.utils.data.DataLoader(dataset_train, batch_size=32, shuffle=True)\n",
     "loss = torch.nn.BCEWithLogitsLoss()\n",
     "optimizer = Adam(model_uncon.parameters())\n",
-    "epochs = 50\n",
+    "epochs = 100\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    losses = []\n",
@@ -332,32 +256,10 @@
    "execution_count": null,
    "id": "bd84ec11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAIN\n",
-      "constraints (should be <= 0.05):\n",
-      "[0.09  0.011 0.041 0.049 0.168 0.058 0.079 0.131 0.041 0.078 0.032 0.052\n",
-      " 0.038 0.157 0.047 0.09  0.209 0.098 0.12  0.009 0.111]\n",
-      "c mean: 0.08129547465415228\n",
-      "c min: 0.00882941484451294\n",
-      "c max: 0.20908750593662262\n",
-      "---\n",
-      "accuracy: 0.815530593734738\n",
-      "accuracy abs. difference:\n",
-      "[0.055 0.007 0.01  0.039 0.098 0.034 0.048 0.065 0.016 0.043 0.021 0.017\n",
-      " 0.032 0.091 0.027 0.049 0.108 0.044 0.059 0.005 0.064]\n",
-      "acc abs dif mean: 0.04437735514388773\n",
-      "acc abs dif min: 0.0050382808657633005\n",
-      "acc abs dif max: 0.10815173527037936\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('TRAIN')\n",
-    "model_stats(model_uncon, features_train, labels_train, group_indices_train, constraints)"
+    "model_stats(model_uncon, features_train, labels_train, group_indices_train, constraints, constraint_bound)"
    ]
   },
   {
@@ -365,32 +267,10 @@
    "execution_count": null,
    "id": "101e001e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST\n",
-      "constraints (should be <= 0.05):\n",
-      "[0.037 0.064 0.401 0.064 0.034 0.084 0.101 0.438 0.102 0.004 0.047 0.336\n",
-      " 0.    0.098 0.148 0.336 0.434 0.485 0.098 0.148 0.05 ]\n",
-      "c mean: 0.1671290709858849\n",
-      "c min: 0.00031441450119018555\n",
-      "c max: 0.48457854986190796\n",
-      "---\n",
-      "accuracy: 0.79296875\n",
-      "accuracy abs. difference:\n",
-      "[0.038 0.056 0.125 0.029 0.047 0.049 0.094 0.164 0.068 0.009 0.011 0.07\n",
-      " 0.026 0.103 0.105 0.096 0.172 0.174 0.076 0.078 0.002]\n",
-      "acc abs dif mean: 0.07587193386098348\n",
-      "acc abs dif min: 0.0020747748869247573\n",
-      "acc abs dif max: 0.17448856799037304\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('TEST')\n",
-    "model_stats(model_uncon, features_test, labels_test, group_indices_test, constraints)"
+    "model_stats(model_uncon, features_test, labels_test, group_indices_test, constraints, constraint_bound)"
    ]
   },
   {
@@ -415,17 +295,9 @@
    "execution_count": null,
    "id": "8564545d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 5|  374|0.010|[ 0.715  0.029  0.013  0.001  0.162  0.314  0.008  0.215  0.311 -0.012 -0.004 -0.023  0.106 -0.004  0.014 -0.016 -0.026  0.110  0.048  0.243  0.000]|[ 0.099 -0.043 -0.015  0.155 -0.004 -0.028  0.025  0.008 -0.031 -0.021 -0.048 -0.025  0.064  0.062 -0.018 -0.045  0.078 -0.012  0.006  0.069 -0.025]|\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.algorithms import SSLALM\n",
+    "from src.algorithms import SSLALM, SSG\n",
     "from torch.nn import Sequential\n",
     "\n",
     "hsize1 = 64\n",
@@ -438,14 +310,23 @@
     "    torch.nn.Linear(hsize2, 1)\n",
     ")\n",
     "\n",
-    "optimizer = SSLALM(\n",
+    "optimizer = SSG(\n",
     "    net=model,\n",
     "    data=dataset_train,\n",
     "    loss=torch.nn.BCEWithLogitsLoss(),\n",
     "    constraints=constraints,\n",
     ")\n",
     "\n",
-    "history = optimizer.optimize(max_runtime=120,batch_size=32,seed=42)"
+    "history = optimizer.optimize(\n",
+    "    max_runtime=180,\n",
+    "    batch_size=32,\n",
+    "    seed=42,\n",
+    "    ctol=0.1,\n",
+    "    f_stepsize_rule='dimin',\n",
+    "    f_stepsize=0.1,\n",
+    "    c_stepsize_rule='dimin',\n",
+    "    c_stepsize=0.1\n",
+    "    )"
    ]
   },
   {
@@ -453,32 +334,10 @@
    "execution_count": null,
    "id": "a329bf12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAIN\n",
-      "constraints (should be <= 0.05):\n",
-      "[0.025 0.018 0.006 0.015 0.036 0.033 0.007 0.03  0.01  0.011 0.008 0.023\n",
-      " 0.003 0.018 0.015 0.021 0.041 0.038 0.021 0.018 0.003]\n",
-      "c mean: 0.018929487182980494\n",
-      "c min: 0.00270998477935791\n",
-      "c max: 0.04117405414581299\n",
-      "---\n",
-      "accuracy: 0.784204283820554\n",
-      "accuracy abs. difference:\n",
-      "[0.066 0.034 0.009 0.071 0.115 0.045 0.032 0.057 0.005 0.049 0.021 0.025\n",
-      " 0.037 0.081 0.011 0.062 0.106 0.036 0.044 0.026 0.07 ]\n",
-      "acc abs dif mean: 0.04769086665847526\n",
-      "acc abs dif min: 0.005426801396574699\n",
-      "acc abs dif max: 0.11500768767965774\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('TRAIN')\n",
-    "model_stats(model, features_train, labels_train, group_indices_train, constraints)"
+    "model_stats(model, features_train, labels_train, group_indices_train, constraints, constraint_bound)"
    ]
   },
   {
@@ -486,32 +345,10 @@
    "execution_count": null,
    "id": "372e50f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST\n",
-      "constraints (should be <= 0.05):\n",
-      "[0.017 0.017 0.074 0.049 0.027 0.043 0.034 0.091 0.066 0.01  0.026 0.056\n",
-      " 0.032 0.044 0.061 0.025 0.101 0.117 0.076 0.092 0.016]\n",
-      "c mean: 0.05112660498846145\n",
-      "c min: 0.01007753610610962\n",
-      "c max: 0.1168212890625\n",
-      "---\n",
-      "accuracy: 0.7837611607142857\n",
-      "accuracy abs. difference:\n",
-      "[0.095 0.017 0.057 0.013 0.063 0.044 0.113 0.038 0.109 0.032 0.052 0.074\n",
-      " 0.004 0.08  0.061 0.071 0.006 0.014 0.076 0.057 0.02 ]\n",
-      "acc abs dif mean: 0.05215174190194807\n",
-      "acc abs dif min: 0.003869420676876123\n",
-      "acc abs dif max: 0.11250258550986258\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('TEST')\n",
-    "model_stats(model, features_test, labels_test, group_indices_test, constraints)"
+    "model_stats(model, features_test, labels_test, group_indices_test, constraints, constraint_bound)"
    ]
   }
  ],
