--- a/algorithm_demo.ipynb
+++ b/algorithm_demo.ipynb
@@ -115,8 +115,8 @@
    ],
    "source": [
     "from itertools import combinations\n",
-    "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import abs_loss_equality, tpr_equality\n",
+    "from humancompatible.train.constraints.constraint import FairnessConstraint\n",
+    "from humancompatible.train.constraints.constraint_fns import abs_loss_equality, tpr_equality\n",
     "\n",
     "# the protected attribute is \"Race\" (RAC1P)\n",
     "# we put a pairwise constraint on each combination of subgroups\n",
@@ -248,106 +248,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 0.4642235327711595\n",
-      "Epoch: 1, loss: 0.4293003898513104\n",
-      "Epoch: 2, loss: 0.42335555399768054\n",
-      "Epoch: 3, loss: 0.4196424624283931\n",
-      "Epoch: 4, loss: 0.4175680346920022\n",
-      "Epoch: 5, loss: 0.41486163972876966\n",
-      "Epoch: 6, loss: 0.4139517352783254\n",
-      "Epoch: 7, loss: 0.41123612145228045\n",
-      "Epoch: 8, loss: 0.41036991043282406\n",
-      "Epoch: 9, loss: 0.40926071751995813\n",
-      "Epoch: 10, loss: 0.40827423497103155\n",
-      "Epoch: 11, loss: 0.4069685044565371\n",
-      "Epoch: 12, loss: 0.40704553817132755\n",
-      "Epoch: 13, loss: 0.40542702303667155\n",
-      "Epoch: 14, loss: 0.4030081082933715\n",
-      "Epoch: 15, loss: 0.402854029188997\n",
-      "Epoch: 16, loss: 0.40264014064866516\n",
-      "Epoch: 17, loss: 0.4018292943947017\n",
-      "Epoch: 18, loss: 0.4005603741388768\n",
-      "Epoch: 19, loss: 0.39991264747056576\n",
-      "Epoch: 20, loss: 0.39948308022160617\n",
-      "Epoch: 21, loss: 0.3977042373070227\n",
-      "Epoch: 22, loss: 0.3978979098277965\n",
-      "Epoch: 23, loss: 0.3971360599222992\n",
-      "Epoch: 24, loss: 0.3965825682306396\n",
-      "Epoch: 25, loss: 0.39528360883040087\n",
-      "Epoch: 26, loss: 0.3952076831566436\n",
-      "Epoch: 27, loss: 0.394789488121335\n",
-      "Epoch: 28, loss: 0.3939208591556443\n",
-      "Epoch: 29, loss: 0.3939340027448322\n",
-      "Epoch: 30, loss: 0.3929075477977416\n",
-      "Epoch: 31, loss: 0.3923278019231345\n",
-      "Epoch: 32, loss: 0.39156716047520085\n",
-      "Epoch: 33, loss: 0.3919449131270604\n",
-      "Epoch: 34, loss: 0.39073002374997096\n",
-      "Epoch: 35, loss: 0.39051303097845186\n",
-      "Epoch: 36, loss: 0.3899189194531313\n",
-      "Epoch: 37, loss: 0.38909248345797615\n",
-      "Epoch: 38, loss: 0.389134583662131\n",
-      "Epoch: 39, loss: 0.38893832908278064\n",
-      "Epoch: 40, loss: 0.3877227986231446\n",
-      "Epoch: 41, loss: 0.38734230063190417\n",
-      "Epoch: 42, loss: 0.3873482831155083\n",
-      "Epoch: 43, loss: 0.3872168723360768\n",
-      "Epoch: 44, loss: 0.38697762780689765\n",
-      "Epoch: 45, loss: 0.38569460679510875\n",
-      "Epoch: 46, loss: 0.38506671679871424\n",
-      "Epoch: 47, loss: 0.3855174164221223\n",
-      "Epoch: 48, loss: 0.38503570036430446\n",
-      "Epoch: 49, loss: 0.38440422620624304\n",
-      "Epoch: 50, loss: 0.3840101764071733\n",
-      "Epoch: 51, loss: 0.3835918906676982\n",
-      "Epoch: 52, loss: 0.3830382922398193\n",
-      "Epoch: 53, loss: 0.38325875003023874\n",
-      "Epoch: 54, loss: 0.38267045167075203\n",
-      "Epoch: 55, loss: 0.3823213039764336\n",
-      "Epoch: 56, loss: 0.3821711873835219\n",
-      "Epoch: 57, loss: 0.38132210528211935\n",
-      "Epoch: 58, loss: 0.38085459837956087\n",
-      "Epoch: 59, loss: 0.380660119366699\n",
-      "Epoch: 60, loss: 0.38020144316500853\n",
-      "Epoch: 61, loss: 0.37971994147769045\n",
-      "Epoch: 62, loss: 0.37906123591320856\n",
-      "Epoch: 63, loss: 0.37932917731814086\n",
-      "Epoch: 64, loss: 0.378760632227308\n",
-      "Epoch: 65, loss: 0.378543665532821\n",
-      "Epoch: 66, loss: 0.37823646229558755\n",
-      "Epoch: 67, loss: 0.378675726342148\n",
-      "Epoch: 68, loss: 0.3775941289828292\n",
-      "Epoch: 69, loss: 0.37769484270497095\n",
-      "Epoch: 70, loss: 0.3773762048887355\n",
-      "Epoch: 71, loss: 0.3770425637319152\n",
-      "Epoch: 72, loss: 0.37635710888675283\n",
-      "Epoch: 73, loss: 0.3758785354106554\n",
-      "Epoch: 74, loss: 0.37620948331563603\n",
-      "Epoch: 75, loss: 0.3748197360629482\n",
-      "Epoch: 76, loss: 0.375041030713224\n",
-      "Epoch: 77, loss: 0.375285562793059\n",
-      "Epoch: 78, loss: 0.3746543423538761\n",
-      "Epoch: 79, loss: 0.374168719796996\n",
-      "Epoch: 80, loss: 0.37315306573041845\n",
-      "Epoch: 81, loss: 0.37449578827779206\n",
-      "Epoch: 82, loss: 0.37369312854882863\n",
-      "Epoch: 83, loss: 0.37333609799056183\n",
-      "Epoch: 84, loss: 0.37308689592672245\n",
-      "Epoch: 85, loss: 0.372309656447864\n",
-      "Epoch: 86, loss: 0.37200959243013393\n",
-      "Epoch: 87, loss: 0.37230217453491476\n",
-      "Epoch: 88, loss: 0.37178379157558084\n",
-      "Epoch: 89, loss: 0.3710946610330471\n",
-      "Epoch: 90, loss: 0.3711938596596675\n",
-      "Epoch: 91, loss: 0.3708337029176099\n",
-      "Epoch: 92, loss: 0.3702425799066467\n",
-      "Epoch: 93, loss: 0.37082634553579347\n",
-      "Epoch: 94, loss: 0.368790007528982\n",
-      "Epoch: 95, loss: 0.3694465529572751\n",
-      "Epoch: 96, loss: 0.3694813261473818\n",
-      "Epoch: 97, loss: 0.3687312745023519\n",
-      "Epoch: 98, loss: 0.3683272294833192\n",
-      "Epoch: 99, loss: 0.36804260027461816\n"
+      "Epoch: 0, loss: 0.46349757064932157\n",
+      "Epoch: 1, loss: 0.4295002950488457\n",
+      "Epoch: 2, loss: 0.4227255582809448\n",
+      "Epoch: 3, loss: 0.4194903533040945\n",
+      "Epoch: 4, loss: 0.4161933082421975\n",
+      "Epoch: 5, loss: 0.41442626488528084\n",
+      "Epoch: 6, loss: 0.4117933259611683\n",
+      "Epoch: 7, loss: 0.409918974951974\n",
+      "Epoch: 8, loss: 0.4095359429317926\n",
+      "Epoch: 9, loss: 0.40733223824229625\n",
+      "Epoch: 10, loss: 0.4060150348315282\n",
+      "Epoch: 11, loss: 0.40542341246535735\n",
+      "Epoch: 12, loss: 0.404065324525748\n",
+      "Epoch: 13, loss: 0.40323235995934475\n",
+      "Epoch: 14, loss: 0.4016180704015174\n",
+      "Epoch: 15, loss: 0.4020076899988843\n",
+      "Epoch: 16, loss: 0.40059379511512816\n",
+      "Epoch: 17, loss: 0.39994363406939165\n",
+      "Epoch: 18, loss: 0.39820664409281953\n",
+      "Epoch: 19, loss: 0.398150879656896\n",
+      "Epoch: 20, loss: 0.3973517100592809\n",
+      "Epoch: 21, loss: 0.39707725824389073\n",
+      "Epoch: 22, loss: 0.3955042596041624\n",
+      "Epoch: 23, loss: 0.3960753854563726\n",
+      "Epoch: 24, loss: 0.39501276216469705\n",
+      "Epoch: 25, loss: 0.3946579004571374\n",
+      "Epoch: 26, loss: 0.39336919508475277\n",
+      "Epoch: 27, loss: 0.3927339928756867\n",
+      "Epoch: 28, loss: 0.39265128787207815\n",
+      "Epoch: 29, loss: 0.39145034085959196\n",
+      "Epoch: 30, loss: 0.3911734277249447\n",
+      "Epoch: 31, loss: 0.39005530682126327\n",
+      "Epoch: 32, loss: 0.3902694277265774\n",
+      "Epoch: 33, loss: 0.3899349652430309\n",
+      "Epoch: 34, loss: 0.38934317380855127\n",
+      "Epoch: 35, loss: 0.38934725685976446\n",
+      "Epoch: 36, loss: 0.3888395121986313\n",
+      "Epoch: 37, loss: 0.38758641937082366\n",
+      "Epoch: 38, loss: 0.3866228824813983\n",
+      "Epoch: 39, loss: 0.3872190235249166\n",
+      "Epoch: 40, loss: 0.3865409423929772\n",
+      "Epoch: 41, loss: 0.38718925948653904\n",
+      "Epoch: 42, loss: 0.38601168897002935\n",
+      "Epoch: 43, loss: 0.38557462982966434\n",
+      "Epoch: 44, loss: 0.38449275343944983\n",
+      "Epoch: 45, loss: 0.3835361286266042\n",
+      "Epoch: 46, loss: 0.3837257699841367\n",
+      "Epoch: 47, loss: 0.38322850596159697\n",
+      "Epoch: 48, loss: 0.38279763529343264\n",
+      "Epoch: 49, loss: 0.38252385719014065\n",
+      "Epoch: 50, loss: 0.38216987398586105\n",
+      "Epoch: 51, loss: 0.38258736544022603\n",
+      "Epoch: 52, loss: 0.381573615063514\n",
+      "Epoch: 53, loss: 0.38164684093291207\n",
+      "Epoch: 54, loss: 0.3804648918698409\n",
+      "Epoch: 55, loss: 0.38036493870562743\n",
+      "Epoch: 56, loss: 0.3794036984576711\n",
+      "Epoch: 57, loss: 0.3797108101924615\n",
+      "Epoch: 58, loss: 0.3796296337885516\n",
+      "Epoch: 59, loss: 0.37813905576643136\n",
+      "Epoch: 60, loss: 0.37894386132912977\n",
+      "Epoch: 61, loss: 0.37890936424290494\n",
+      "Epoch: 62, loss: 0.3780763379763812\n",
+      "Epoch: 63, loss: 0.37740884787802187\n",
+      "Epoch: 64, loss: 0.37799342365802396\n",
+      "Epoch: 65, loss: 0.37659537815488875\n",
+      "Epoch: 66, loss: 0.37684703967534006\n",
+      "Epoch: 67, loss: 0.3764669771439263\n",
+      "Epoch: 68, loss: 0.3760061870395605\n",
+      "Epoch: 69, loss: 0.3761867823944028\n",
+      "Epoch: 70, loss: 0.3747647256324334\n",
+      "Epoch: 71, loss: 0.3744730817353619\n",
+      "Epoch: 72, loss: 0.37441441598015707\n",
+      "Epoch: 73, loss: 0.3742638121226004\n",
+      "Epoch: 74, loss: 0.3730027308421476\n",
+      "Epoch: 75, loss: 0.3727368223148265\n",
+      "Epoch: 76, loss: 0.3718348775125508\n",
+      "Epoch: 77, loss: 0.3718047884758562\n",
+      "Epoch: 78, loss: 0.37228686126348165\n",
+      "Epoch: 79, loss: 0.37233117039847585\n",
+      "Epoch: 80, loss: 0.37078445783949326\n",
+      "Epoch: 81, loss: 0.3705418659706733\n",
+      "Epoch: 82, loss: 0.37155885764929864\n",
+      "Epoch: 83, loss: 0.37024217863966313\n",
+      "Epoch: 84, loss: 0.37042985863185357\n",
+      "Epoch: 85, loss: 0.37004580155813266\n",
+      "Epoch: 86, loss: 0.36969783486399266\n",
+      "Epoch: 87, loss: 0.3688722074231399\n",
+      "Epoch: 88, loss: 0.3681897620470928\n",
+      "Epoch: 89, loss: 0.3689138336173658\n",
+      "Epoch: 90, loss: 0.36889166102212456\n",
+      "Epoch: 91, loss: 0.3685122812499425\n",
+      "Epoch: 92, loss: 0.3678717091679573\n",
+      "Epoch: 93, loss: 0.36827987069929286\n",
+      "Epoch: 94, loss: 0.36637745135729866\n",
+      "Epoch: 95, loss: 0.3662173674841012\n",
+      "Epoch: 96, loss: 0.3667734933218786\n",
+      "Epoch: 97, loss: 0.36630333584201125\n",
+      "Epoch: 98, loss: 0.36586450858573827\n",
+      "Epoch: 99, loss: 0.3652148133675967\n"
      ]
     }
    ],
@@ -393,19 +393,19 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.01):\n",
-      "[0.087 0.018 0.09  0.172 0.056 0.069 0.003 0.085 0.031 0.072 0.154 0.039\n",
-      " 0.082 0.033 0.116]\n",
-      "c mean: 0.07374673883120218\n",
-      "c min: 0.0027457773685455322\n",
-      "c max: 0.1718178391456604\n",
+      "[0.097 0.015 0.062 0.183 0.055 0.081 0.035 0.086 0.041 0.047 0.168 0.04\n",
+      " 0.121 0.007 0.128]\n",
+      "c mean: 0.0777715116739273\n",
+      "c min: 0.006703734397888184\n",
+      "c max: 0.1832037717103958\n",
       "---\n",
-      "accuracy: 0.8260657224586618\n",
+      "accuracy: 0.8240424195911533\n",
       "accuracy abs. difference:\n",
-      "[0.059 0.004 0.074 0.099 0.014 0.055 0.015 0.041 0.045 0.07  0.096 0.01\n",
-      " 0.026 0.06  0.086]\n",
-      "acc abs dif mean: 0.05016161364761892\n",
-      "acc abs dif min: 0.003959985818891454\n",
-      "acc abs dif max: 0.09949120187772498\n"
+      "[0.063 0.004 0.022 0.102 0.023 0.059 0.041 0.038 0.041 0.018 0.097 0.018\n",
+      " 0.08  0.001 0.079]\n",
+      "acc abs dif mean: 0.045657815374404734\n",
+      "acc abs dif min: 0.0006777088020819555\n",
+      "acc abs dif max: 0.10155016303823039\n"
      ]
     }
    ],
@@ -426,19 +426,19 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.01):\n",
-      "[0.051 0.069 0.032 0.023 0.079 0.119 0.082 0.028 0.029 0.037 0.091 0.148\n",
-      " 0.054 0.111 0.057]\n",
-      "c mean: 0.06724767088890075\n",
-      "c min: 0.02253669500350952\n",
-      "c max: 0.14789214730262756\n",
+      "[0.079 0.057 0.112 0.03  0.075 0.137 0.191 0.109 0.004 0.055 0.027 0.132\n",
+      " 0.082 0.187 0.105]\n",
+      "c mean: 0.09223249951998393\n",
+      "c min: 0.004368424415588379\n",
+      "c max: 0.19137758016586304\n",
       "---\n",
-      "accuracy: 0.7915736607142857\n",
+      "accuracy: 0.794921875\n",
       "accuracy abs. difference:\n",
-      "[0.036 0.023 0.009 0.05  0.038 0.059 0.045 0.015 0.002 0.014 0.074 0.061\n",
-      " 0.059 0.047 0.012]\n",
-      "acc abs dif mean: 0.03640103546705118\n",
-      "acc abs dif min: 0.0021533979352713617\n",
-      "acc abs dif max: 0.0738071478730088\n"
+      "[0.022 0.016 0.011 0.083 0.043 0.038 0.033 0.061 0.021 0.005 0.099 0.059\n",
+      " 0.094 0.054 0.04 ]\n",
+      "acc abs dif mean: 0.04521909230893753\n",
+      "acc abs dif min: 0.004741402801242578\n",
+      "acc abs dif max: 0.09864360424289464\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.algorithms import SSLALM, SSG\n",
+    "from humancompatible.train.algorithms import SSLALM, SSG\n",
     "from torch.nn import Sequential\n",
     "\n",
     "hsize1 = 64\n",
@@ -517,19 +517,19 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.01):\n",
-      "[0.017 0.017 0.001 0.013 0.015 0.    0.015 0.003 0.002 0.015 0.003 0.002\n",
-      " 0.012 0.014 0.002]\n",
-      "c mean: 0.008758107821146647\n",
-      "c min: 0.0002809762954711914\n",
-      "c max: 0.0168074369430542\n",
+      "[0.008 0.01  0.002 0.009 0.01  0.002 0.01  0.001 0.002 0.011 0.001 0.001\n",
+      " 0.011 0.012 0.002]\n",
+      "c mean: 0.006037203470865885\n",
+      "c min: 0.0006375312805175781\n",
+      "c max: 0.012136995792388916\n",
       "---\n",
-      "accuracy: 0.7457615293378915\n",
+      "accuracy: 0.7662038652061676\n",
       "accuracy abs. difference:\n",
-      "[0.085 0.067 0.077 0.144 0.064 0.018 0.008 0.059 0.021 0.01  0.077 0.003\n",
-      " 0.067 0.013 0.079]\n",
-      "acc abs dif mean: 0.052704355578546074\n",
-      "acc abs dif min: 0.0027039072700376643\n",
-      "acc abs dif max: 0.14368310418848562\n"
+      "[0.05  0.026 0.071 0.121 0.037 0.024 0.021 0.071 0.012 0.046 0.095 0.012\n",
+      " 0.05  0.034 0.084]\n",
+      "acc abs dif mean: 0.050338703671629736\n",
+      "acc abs dif min: 0.011668145409021724\n",
+      "acc abs dif max: 0.12120685429061662\n"
      ]
     }
    ],
@@ -550,19 +550,19 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.01):\n",
-      "[0.019 0.002 0.026 0.004 0.022 0.017 0.045 0.015 0.003 0.028 0.002 0.02\n",
-      " 0.03  0.048 0.018]\n",
-      "c mean: 0.01985848347345988\n",
-      "c min: 0.0017260313034057617\n",
-      "c max: 0.04803180694580078\n",
+      "[0.005 0.001 0.021 0.007 0.014 0.006 0.026 0.012 0.009 0.02  0.006 0.015\n",
+      " 0.014 0.035 0.021]\n",
+      "c mean: 0.0140508770942688\n",
+      "c min: 0.0007504820823669434\n",
+      "c max: 0.03483313322067261\n",
       "---\n",
-      "accuracy: 0.7452566964285714\n",
+      "accuracy: 0.7642299107142857\n",
       "accuracy abs. difference:\n",
-      "[0.086 0.02  0.088 0.061 0.087 0.066 0.175 0.026 0.001 0.108 0.041 0.067\n",
-      " 0.149 0.175 0.026]\n",
-      "acc abs dif mean: 0.0784395204252176\n",
-      "acc abs dif min: 0.0007811345451474994\n",
-      "acc abs dif max: 0.17542678822737567\n"
+      "[0.056 0.002 0.006 0.06  0.041 0.054 0.05  0.003 0.015 0.004 0.057 0.039\n",
+      " 0.053 0.035 0.018]\n",
+      "acc abs dif mean: 0.033019134885242975\n",
+      "acc abs dif min: 0.0023696482327177915\n",
+      "acc abs dif max: 0.059619158525802796\n"
      ]
     }
    ],
@@ -574,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-vision",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
