minor changes to notebooks & cleanup

--- a/examples/torch_api_demo.ipynb
+++ b/examples/torch_api_demo.ipynb
@@ -43,7 +43,24 @@
    "execution_count": null,
    "id": "48b9577d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data for 2018 1-Year person survey for VA...\n",
+      "Downloading the attribute definition file...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\andre\\miniconda3\\envs\\hc-mkl\\Lib\\site-packages\\pandas\\core\\computation\\expressions.py:73: RuntimeWarning: invalid value encountered in greater\n",
+      "  return op(a, b)\n"
+     ]
+    }
+   ],
    "source": [
     "# load and prepare data\n",
     "\n",
@@ -160,6 +177,8 @@
     "            norm_viol.backward()\n",
     "            # for the Lagrangian family of algorithms, dual_step requires the index of constraint and the value as arguments\n",
     "            # to update the corresponding dual multiplier\n",
+    "            # in a stochastic-constrained setting, this estimate needs (in theory) to be independent from the one used to update dual parameters\n",
+    "            # in practice, it makes little difference  \n",
     "            optimizer.dual_step(i, c_val=norm_viol)\n",
     "            optimizer.zero_grad()\n",
     "            c_log[-1].append(norm.detach().numpy())\n",
@@ -678,7 +697,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-dev",
+   "display_name": "hc-mkl",
    "language": "python",
    "name": "python3"
   },
