fix imports in example notebooks

--- a/examples/algorithm_demo.ipynb
+++ b/examples/algorithm_demo.ipynb
@@ -34,9 +34,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data for 2018 1-Year person survey for OK...\n",
       "Protected attribute: RAC1P\n",
       "Number of subgroups considered: 6\n",
       "Size of subgroups: [10685, 794, 1213, 259, 315, 997]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\andre\\miniconda3\\envs\\hc-mkl\\Lib\\site-packages\\pandas\\core\\computation\\expressions.py:73: RuntimeWarning: invalid value encountered in greater\n",
+      "  return op(a, b)\n"
      ]
     }
    ],
@@ -115,8 +124,8 @@
    ],
    "source": [
     "from itertools import combinations\n",
-    "from humancompatible.train.constraints.constraint import FairnessConstraint\n",
-    "from humancompatible.train.constraints.constraint_fns import abs_loss_equality, tpr_equality\n",
+    "from humancompatible.train.fairness.constraints import FairnessConstraint\n",
+    "from humancompatible.train.fairness.constraints.constraint_fns import abs_loss_equality, tpr_equality\n",
     "\n",
     "# the protected attribute is \"Race\" (RAC1P)\n",
     "# we put a pairwise constraint on each combination of subgroups\n",
@@ -574,7 +583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-dev",
+   "display_name": "hc-mkl",
    "language": "python",
    "name": "python3"
   },
