--- a/examples/constraint_demo.ipynb
+++ b/examples/constraint_demo.ipynb
@@ -34,9 +34,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import abs_loss_equality\n",
-    "\n",
+    "from humancompatible.train.fairness.constraints import FairnessConstraint\n",
+    "from humancompatible.train.fairness.constraints.constraint_fns import abs_loss_equality\n",
+    " \n",
     "# the toy dataset\n",
     "features = torch.arange(0,10)\n",
     "# encode group membership of each sample\n",
@@ -105,7 +105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-dev",
+   "display_name": "hc-mkl",
    "language": "python",
    "name": "python3"
   },
