--- a/examples/torch_api_demo.ipynb
+++ b/examples/torch_api_demo.ipynb
@@ -305,6 +305,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ef60dce",
+   "metadata": {},
+   "source": [
+    "Here, to make sure each batch contains representatives of each protected group, we can use the BalancedBatchSampler from the `utils` subpackage - a custom PyTorch `Sampler` which yields an equal number of samples from each subgroup in each batch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0e2bd5d",
@@ -319,10 +327,11 @@
     "\n",
     "dataset = torch.utils.data.TensorDataset(features_train, sens_train, labels_train)\n",
     "\n",
-    "# dataloader = torch.utils.data.DataLoader(dataset, batch_size=256, shuffle=True, drop_last=True)\n",
     "sampler = BalancedBatchSampler(\n",
     "    subgroup_onehot=sens_train,\n",
-    "    batch_size=256, drop_last=True)\n",
+    "    batch_size=256,\n",
+    "    drop_last=True\n",
+    "    )\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_sampler=sampler)\n",
     "\n",
     "statistic = PositiveRate()\n",
